Prevented past events from showing in upcoming events on main

--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -99,7 +99,7 @@
 											</tr>
 										</thead>
 										<tbody>
-										{% for event in events %}
+										{% for event in upcomingEvents %}
 											<tr>
 												<td>{{ event.name }}</td>
 												<td>{{ event.description|truncatewords:8 }}</td>
