--- a/genie/web/templates/web/eventManagement.html
+++ b/genie/web/templates/web/eventManagement.html
@@ -47,34 +47,23 @@
 						<section class="box">
 							<h3 style="text-align: center;">Upcoming Events</h3>
 							<ul class="alt">
+								{% for event in events %}
 								<li>
 									<div class="row">
-										<p class="col-4" style="text-align: center;">Event 1</p>
-										<p class="col-4" style="text-align: center;">Date</p>
+										<p class="col-4" style="text-align: center;">{{ event.name }}</p>
+										<p class="col-4" style="text-align: center;">{{ event.date }}</p>
 										<p class="col-4 button alt">Delete This Event</p>
 									</div>
 								</li>
-								<li>
-									<div class="row">
-										<p class="col-4" style="text-align: center;">Event 2</p>
-										<p class="col-4" style="text-align: center;">Date</p>
-										<p class="col-4 button alt">Delete This Event</p>
-									</div>
-								</li>
-								<li>
-									<div class="row">
-										<p class="col-4" style="text-align: center;">Event 3</p>
-										<p class="col-4" style="text-align: center;">Date</p>
-										<p class="col-4 button alt">Delete This Event</p>
-									</div>
-								</li>
+								{% endfor %}
 								<li><p style="text-align: center;">...</p></li>
 							</ul>
 						</section>
 						<section class="box">
 							<h3 style="text-align: center;">Add a Future Event</h3>
 							<p style="text-align: center;">Enter pertinent event information here...</p>
-							<form method="post" action="#">
+							<form method="post" action={% url "web:add-event" %}>
+								{% csrf_token %}
 								<div class="row gtr-uniform gtr-50">
 									<div class="col-6 col-12-mobilep">
 										<input type="text" name="name" id="name" value="" placeholder="Event Name" />
@@ -84,6 +73,15 @@
 									</div>
 									<div class="col-12">
 										<textarea name="description" id="description" placeholder="Describe the event" rows="4"></textarea>
+									</div>
+									<div class="col-12">
+										<input type="text" name="address" id="address" value="" placeholder="Event Address" />
+									</div>
+									<div class="col-6 col-12-mobilep">
+										<input type="text" name="latitude" id="latitude" value="" placeholder="Latitude" />
+									</div>
+									<div class="col-6 col-12-mobilep">
+										<input type="text" name="longitude" id="longitude" value="" placeholder="Longitude" />
 									</div>
 									<div class="col-12">
 										<ul class="actions">
