--- a/genie/web/templates/web/about.html
+++ b/genie/web/templates/web/about.html
@@ -10,8 +10,8 @@
 		<title>About</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel='icon' href='images/favicon.ico' type='image/x-icon' />
+		{% load static %}
+		<link rel="stylesheet" href={% static "web/assets/css/main.css" %}/>
 	</head>
 	<body class="landing is-preload">
 		<div id="page-wrapper">
