--- a/genie/web/templates/web/lotManagement.html
+++ b/genie/web/templates/web/lotManagement.html
@@ -19,6 +19,8 @@
 		{% load static %}
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href={% static "web/assets/css/main.css" %}/>
+		<link rel='icon' href={% static 'web/images/favicon.ico' %} type='image/x-icon' />
+
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
