--- a/genie/web/templates/web/lotInfo.html
+++ b/genie/web/templates/web/lotInfo.html
@@ -108,38 +108,37 @@
 					</div>
 
 					<!-- Attendant Functionality -->
-					<div id="attendantFunctions">
-						<h2 style="text-align: center;">Attendant Functions</h2>
-						<section class="box special">
-								<h3>Check In Customers</h3>
-								<div class="col-12">
-									<select name="category" id="category">
-										<option value="">- Select Event -</option>
-										<option value="1">1</option>
-										<option value="1">2</option>
-										<option value="1">3</option>
-										<option value="1">4</option>
-									</select>
-								</div>
-								<br />
-								<ul class="actions special">
-									<li><a href={% url "web:attendant" %} class="button special">Fill Event Reservations</a></li>
-								</ul>
-						</section>
-					</div>
+					{% if profile.is_attendant %}
+						<div id="attendantFunctions">
+							<h2 style="text-align: center;">Attendant Functions</h2>
+							<section class="box special">
+									<span class="image featured"><img src="{% static 'web/images/checkIn.jpg' %}" alt="" /></span>
+									<h3>Check In Customers for Current Event</h3>
+									<form class="col-12" action="{% url 'web:attendant' %}" method="post" >
+										{% csrf_token %}
+										<input type="hidden" value="{{ event.id }}" id="eventToCheckIn" />
+										<ul class="actions special">
+											<li><input type="submit" value="Fill Event Reservations" class="button special"/></li>
+										</ul>
+									</form>
+							</section>
+						</div>
+					{% endif %}
 
 					<!-- Owner Functionality -->
+				{% if profile.is_owner %}
 					<div id="ownerFunctions">
-						<h2 style="text-align: center;">Lot Owner Functions</h2>
+						<!-- <h2 style="text-align: center;">Lot Owner Functions</h2> -->
 						<div class="row">
 							<div class="col-6 col-12-narrower">
 
 								<section class="box special">
 									<span class="image featured"><img src={% static "web/images/parkingGarage2.jpg" %} alt="" /></span>
-									<h3>Edit this Parking Lot's Details</h3>
-									<p>Assign new attendants; manage parking types and prices.</p>
+									<h3>Manage this Parking Lot</h3>
+									<p>Assign new attendants; edit parking types and prices.</p>
+									<br />
 									<ul class="actions special">
-										<li><a href="#" class="button special">Manage this parking lot</a></li>
+										<li><a href={% url "web:lots" %} class="button special">Edit this Lot</a></li>
 									</ul>
 								</section>
 
@@ -149,40 +148,41 @@
 								<section class="box special">
 									<span class="image featured"><img src={% static "web/images/sunset.jpg" %} alt="" /></span>
 									<h3>View current lot reservations</h3>
-									<div class="col-12">
-										<select name="category" id="category">
-											<option value="">- Select Event -</option>
-											<option value="1">1</option>
-											<option value="1">2</option>
-											<option value="1">3</option>
-											<option value="1">4</option>
+									<form class="col-12" method="post" action="{% url 'web:lot-info' %}">
+										{% csrf_token %}
+										<select name="eventForLot" id="eventForLot">
+											<option value="">Select Event</option>
+											{% for event in events %}
+												<option value="{{ event.id }}">{{ event.name }} | {{ event.date }}</option>
+											{% endfor %}
 										</select>
-									</div>
-									<br />
-									<ul class="actions special">
-										<li><a href="#" class="button special">View Lot Reservations</a></li>
-									</ul>
+										<br />
+										<ul class="actions special">
+											<li><input type="submit" class="button special" value="View Lot Reservations" /></li>
+										</ul>
+									</form>
+
 								</section>
 
 							</div>
 						</div>
 					</div>
-				</section>
+				{% endif %}
 
 			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/palani-johnson/TheDjinns-Group10" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>USU CS 3540. Group 10- The Djinns: Joel Christensen, Autumn Arbon, Lexy Simmons, Palani Johnson.</li><li>HTML Template Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/palani-johnson/TheDjinns-Group10" class="icon brands fa-github"><span class="label">Github</span></a></li>
+					<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+					<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>USU CS 3540. Group 10- The Djinns: Joel Christensen, Autumn Arbon, Lexy Simmons, Palani Johnson.</li><li>HTML Template Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</footer>
 
 		</div>
 
