--- a/genie/web/templates/web/lotInfo.html
+++ b/genie/web/templates/web/lotInfo.html
@@ -50,7 +50,7 @@
 							<br />
 
 							<section class="box">
-								<div id="map" eventid={{ currentEvent.id }} style="height:50em; width:100%;"></div>
+								<div id="map" lotid={{ lot }} style="height:50em; width:100%;"></div>
 
 								<!-- Async script executes immediately and must be after any DOM elements used in callback. -->
 								<script
