Fixed footer display bug in lot-info

--- a/genie/web/templates/web/lotInfo.html
+++ b/genie/web/templates/web/lotInfo.html
@@ -137,7 +137,6 @@
 
 							</div>
 							<div class="col-6 col-12-narrower">
-
 								<section class="box special">
 									<span class="image featured"><img src={% static "web/images/sunset.jpg" %} alt="" /></span>
 									<h3>View current lot reservations</h3>
@@ -154,13 +153,12 @@
 											<li><input type="submit" class="button special" value="View Lot Reservations" /></li>
 										</ul>
 									</form>
-
 								</section>
-
 							</div>
 						</div>
 					</div>
 				{% endif %}
+				</section>
 
 			<!-- Footer -->
 			<footer id="footer">
@@ -176,7 +174,6 @@
 					<li>USU CS 3540. Group 10- The Djinns: Joel Christensen, Autumn Arbon, Lexy Simmons, Palani Johnson.</li><li>HTML Template Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
-
 		</div>
 
 		<!-- Scripts -->
