--- a/genie/web/templates/web/about.html
+++ b/genie/web/templates/web/about.html
@@ -13,27 +13,26 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href={% static "web/assets/css/main.css" %}/>
 		<link rel='icon' href={% static 'web/images/favicon.ico' %} type='image/x-icon' />
-
+		{% block style %}
+        <link rel="stylesheet" type="text/css" href="{% static "web/assets/css/fontawesome-all.min.css" %}" />
+	    {% endblock %}
 	</head>
 	<body class="landing is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1>About</h1>
+					<h1><a href={% url "web:main" %}>Big Blue's Parking Genie</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href={% url "web:home"%}>Home</a></li>
-							<!-- <li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
-							</li> -->
 							<li><a href="{% url 'web:home' %}#cta" class="button">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
 
 			<!-- Banner -->
-				<section id="banner">
+				<section id="banner" style="background-image: url('images/overlay.png'), url({% static 'web/images/banner.jpg' %});">
 					<h2>About Big Blue's Parking Genie</h2>
 					<p>And The Team Behind It</p>
 				</section>
@@ -60,11 +59,12 @@
 
 			<!-- Main -->
 				<section id="main" class="container">
-
 					<section class="box special">
-						<header class="major">
-							<h2><a href="{% url 'web:home' %}#cta">Reserve a spot now!</a></h2>
-						</header>
+						<section class="major">
+							<br />
+							<br />
+							<h3><a class="button" href="{% url 'web:home' %}#cta">Sign Up Now!</a></h3>
+						</section>
 					</section>
 				</section>
 
