Working on lot-info

--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -199,9 +199,9 @@
 									<br />
 									<!-- Register spots for this parking lot -->
 									<div class="row row-gtr-uniform" style="padding-left: 2em;">
-										<input type="text" class="col-4 button alt" placeholder="Spot Type..." />
-										<input type="number" class="col-4 button alt" placeholder="Quantity..." />
-										<input type="number" class="col-4 button alt" placeholder="Price..." />
+										<input type="text" class="col-4 button alt" id="newSpotType" placeholder="Spot Type..." />
+										<input type="number" class="col-4 button alt" id="newQuantity" placeholder="Quantity..." />
+										<input type="number" class="col-4 button alt" id="newPrice" placeholder="Price..." />
 									</div>
 									<br />
 									<input class="button" type="submit" value="Register your New Lot"/>
