Fixed lat and long error for new lots

--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -187,11 +187,11 @@
 									<div class="row row-gtr-uniform">
 										<div class="col-6">
 											<h4>Enter <a href="https://support.google.com/maps/answer/18539?co=GENIE.Platform%3DDesktop&hl=en">Latitude</a></h4>
-											<input type="number" step="any" class="button alt" id="latitude" />
+											<input type="number" step="any" class="button alt" id="latitude" name="latitude" />
 										</div>
 										<div class="col-6">
 											<h4>Enter <a href="https://support.google.com/maps/answer/18539?co=GENIE.Platform%3DDesktop&hl=en">Longtitude</a></h4>
-											<input type="number" step="any" class="button alt" id="longtitude" />
+											<input type="number" step="any" class="button alt" id="longitude" name="longitude" />
 										</div>
 									</div>
 									<br />
