--- a/genie/web/templates/web/pastReservations.html
+++ b/genie/web/templates/web/pastReservations.html
@@ -59,7 +59,15 @@
 										<div class="row">
 											<p class="col-3">{{ reservation.event.date }}</p>
 											<a class="button alt col-3">{{ reservation.event }}</a>
-											<p class="col-3"><a href="{% url 'web:lot-info' %}" class="">See Lot Map and Details</a></p>
+											<form class="col-3" method="post" action="{% url 'web:lot-info' %}">
+												{% csrf_token %}
+												<input type="hidden" value="{{ reservation.id }}" name="pastReservation" />
+												<input type="hidden" value="{{ reservation.spot.lot.id }}" name="lot" />
+												<ul class="actions special">
+													<li><a><input type="submit" class="" value="See Lot Map and Details" /></a></li>
+												</ul>
+											</form>
+
 											<form class="col-3" action="{% url 'web:reserve' %}" method="post">
 												{% csrf_token %}
 												<input type="hidden" value="{{ reservation.spot.lot.id }}" id="againLotId" name="againLotId" class="button special"/>
